# algorithms_and_data_structures

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  dependencies.cmake
benchmark/: CMakeLists.txt
benchmark-suite/: CMakeLists.txt
benchmark-suite/include/helpers/: RandomGenerators.h
benchmark-suite/src/DivideAndConquer/: MaxSumSubArrayBenchmarks.cpp
benchmark/src/DivideAndConquer/: MaxSumSubArrayBenchmarks.cpp
common/: CMakeLists.txt
common/include/: Concepts.h  Doxygen.h
datastructures/: CMakeLists.txt
datastructures/include/: Matrix.h  Matrix.tpp  MatrixView.h  MatrixView.tpp  ReadOnlyMatrixView.h  ReadOnlyMatrixView.tpp
divide-and-conquer/: CMakeLists.txt
divide-and-conquer/include/: MatrixMultiplication.h  MatrixMultiplication.tpp  MaxSumSubarray.h  MaxSumSubarray.tpp
generic/: CMakeLists.txt
generic/include/: BinaryAdder.h  BinaryAdder.tpp  HornersRule.h  HornersRule.tpp  InversionCount.h  InversionCount.tpp  TwoSum.h  TwoSum.tpp
generic/src/: BinaryAdder.cpp
playground/: CMakeLists.txt
playground/src/: main.cpp
searching/: CMakeLists.txt
searching/include/: BinarySearch.h  BinarySearch.tpp  LinearSearch.h  LinearSearch.tpp
sorting/: CMakeLists.txt
sorting/include/: BinaryInsertionSort.h  BinaryInsertionSort.tpp  BubbleSort.h  BubbleSort.tpp  HybridSort.h  HybridSort.tpp  InsertionSort.h  InsertionSort.tpp  MergeSort.h  MergeSort.tpp  RecursiveInsertionSort.h  RecursiveInsertionSort.tpp  SelectionSort.h  SelectionSort.tpp
sorting/src/: InsertionSort.cpp
tests/: CMakeLists.txt
tests/include/: DoxygenGroups.h  TestUtils.h
tests/src/datastructures/: MatrixTests.cpp  MatrixViewTests.cpp  ReadOnlyMatrixViewTests.cpp
tests/src/divide-and-conquer/: MatrixMultiplicationTest.cpp  MaxSumSubarray.cpp  MaxSumSubarrayTest.cpp  MaxSumSubarrayTests.cpp
tests/src/generic/: BinaryAdderTest.cpp  BinaryAdderTests.cpp  HornersRuleTests.cpp  InversionCountTest.cpp  InversionCountTests.cpp  TwoSumTest.cpp  TwoSumTests.cpp
tests/src/searching/: BinarySearchTest.cpp  BinarySearchTests.cpp  LinearSearchTest.cpp  LinearSearchTests.cpp
tests/src/sorting/: BinaryInsertionSortTest.cpp  BinaryInsertionSortTests.cpp  BubbleSortTests.cpp  HybridSortTest.cpp  HybridSortTests.cpp  InsertionSortTest.cpp  InsertionSortTests.cpp  MergeSortTest.cpp  MergeSortTests.cpp  RecursiveInsertionSortTest.cpp  RecursiveInsertionSortTests.cpp  SelectionSortTest.cpp  SelectionSortTests.cpp
